--- a/Styles.css
+++ b/Styles.css
@@ -331,3 +331,21 @@ h2 {
     height: 100%;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
 }
+
+button{
+display: inline-block;
+outline: none;
+cursor: pointer;
+font-size: 16px;
+line-height: 20px;
+font-weight: 600;
+border-radius: 8px;
+padding: 13px 23px;
+border: 1px solid #222222;
+background: #fff;
+color: #222222;
+:hover {
+    border-color: #000000;
+    background: #f7f7f7;
+}
+}
